force-app/main/default/objects/Sample_Removal__c/Sample_Removal__c.object-meta.xml
<CustomObject>
    <label>Sample Removal</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Sample Removal Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Removal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>