force-app/main/default/objects/Sample_Removal__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <formula>TEXT(  Product_Model__r.Product_Line__c  )</formula>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>