force-app/main/default/objects/Sample_Removal__c/fields/Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Model__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Model</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$User.Sales_Region__c</field>
            <operation>equals</operation>
            <valueField>Product__c.sales_region__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Sample Removal</relationshipLabel>
    <relationshipName>Sample_Removal</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>