force-app/main/default/objects/Sample_Removal__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Sample Removal</relationshipLabel>
    <relationshipName>Sample_Removal</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>