force-app/main/default/objects/Sample_Removal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Model__c</columns>
    <columns>Store__c</columns>
    <columns>Number__c</columns>
    <columns>Deadline__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>